[tool.poetry]
name = "backlog-manager"
version = "0.1.0"
description = ""
authors = ["Tamir <37386851+tamireinhorn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.2"
numpy = "^1.23.5"
beautifulsoup4 = "^4.11.1"
selenium = "^4.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
